pre-config/cilium_nw/roles/allow_all_egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-all-egress"
spec:
  endpointSelector:
    matchLabels:
      egress: all
  egress:
  - toEndpoints:
    - {}
  - toEntities:
    - world
