pre-config/cilium_nw/roles/allow_all_ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-all-ingress"
spec:
  endpointSelector:
    matchLabels:
      ingress: all
  ingress:
    - fromEndpoints:
      - {}
    - fromEntities:
      - world
