pre-config/cilium_nw/roles/allow_lan_egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-lan-egress"
spec:
  endpointSelector:
    matchLabels:
      egress: lan
  egress:
  - toEndpoints:
    - {}
  - toCIDR:
    - 192.168.0.0/24
