pre-config/cilium_nw/roles/allow_lan_ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-lan-ingress"
spec:
  endpointSelector:
    matchLabels:
      ingress: lan
  ingress:
    - fromEndpoints:
      - {}
    - fromCIDR:
      - 192.168.0.0/24
    # - fromCIDR:
    #   - 0.0.0.0/0
